  slashes must be replaced by colons in this context)
- Text objects: in scripts and the gui console, many
  commands can now have their output diverted to a saved
  object (e.g. "ADF <- adf 1 Ct").  As with models and
  graphs, these objects appear in the Session icon
  window, and they can be displayed and freed using
  objectname.show, objectname.free

2/2/2004 version 1.2.2
- Make AIC retrievable via genr ("genr foo = $aic")
- Fix brokenness in RTF printing/copying of ARMA models
- Add calculation of modulus and frequency for ARMA roots,
  and add printing of these to LaTeX and RTF output
- Fix bug in accessing critical values of F (Utilities menu)
- Add DFFITS values to the "influential observations" model
  test; also expand the help entry for this
- Add a little explanation of Johansen cointegration test
  results to GUI helpfile
- Fix bug: when you go to save data imported from gnumeric,
  the suggested file suffix should be changed to ".gdt"
- Fix bug: when importing data from Excel with a non-zero
  row offset, respect the offset when checking for date
  strings
- Fix bug: adding a variable to the built-in spreadsheet
  (GTK 2 version) when there are already 6 variables shown
- Fix bug: handle quotation marks within descriptions of
  variables (XML encoding)
- Fix bug: bad behavior when you put an Excel file to open
  on the gretl command line, then cancel the import
- Fix bug: X-Y plot with "factor separation" went wrong in
  some cases (spotted by Ignacio Diaz-Emparanza)
- Fix bug: weighted least squares with a dummy variable for
  the weight crashed gretl when using QR decomposition
- Fix bug: a syntactically incorrect "genr" expression could
  lead to a crash (thanks to Steve Walesch for spotting this)
- Fix bug: set panel structure dialog very messed up in the
  gtk-1.2 version of the GUI program
- Fix bug: Sorting variables by ID in the main window did not
  work correctly for more than 9 variables

1/22/2004 version 1.2.1